Fix the footer overlapping page content

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -317,8 +317,7 @@ main {
 /* FOOTER */
 
 footer {
-	position: absolute;
-	bottom: 0;
+	position: relative;
 	width: 100%;
 	height: 121px;
 	background-color: var(--color-light-pink);
